# csc231-game

./: main.cpp  settings.txt
assets/: firearms.txt  tiles.txt
content/actions/: CMakeLists.txt  attack.cpp  attack.h  closedoor.cpp  move.cpp  move.h  opendoor.cpp  opendoor.h  rest.cpp  wander.cpp  wander.h
content/entities/: heroes.cpp  heroes.h  monsters.cpp  monsters.h
content/events/: CMakeLists.txt  animation.cpp  animation.h  closedoor.cpp  die.cpp  hit.cpp  hit.h  opendoor.cpp  opendoor.h  recoil.cpp  recoil.h  swing.h  thrust.cpp  thrust.h
content/items/: CMakeLists.txt  bite.cpp  knife.cpp  knife.h  launcher.cpp  launcher.h  next_floor.cpp  next_floor.h  spear.cpp  spear.h  sword_red_gem.cpp  sword_red_gem.h
engine/: camera.cpp  engine.cpp  engine.h  entity.cpp  settings.cpp  settings.h
